Add journey functionality, update user agent, and enhance documentation
- Implement journey search with passenger and filter options in `journeys.js`
- Update user agent in API requests for better identification
- Add operators data in `operators.json`
- Enhance README with new parameters for journey function
- Create a TODO list for future improvements
- Add tests for journey functionality in `test.js`

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -15,8 +15,7 @@ jobs:
           node-version: 20
       - run: npm install
       - run: npm ci
-      - run: npm test
-
+# testing isnt possible here because oebbs api is blocking the ip ranges used by github actions runners
   publish-gpr:
     needs: build
     runs-on: ubuntu-latest
